add chat, trade history, widgets

--- a/src/app/dashboard/graph/graph.component.html
+++ b/src/app/dashboard/graph/graph.component.html
@@ -1,4 +1,4 @@
-<div class="widget">
+<div class="widget widget--gradient">
   <div class="widget__header">
     <span class="widget__name">Graph <span>BTC / USD</span></span>
     <a href="#" class="widget__question">
@@ -58,5 +58,8 @@
 
       </div>
     </div>
+  </div>
+  <div class="widget__content">
+    <img src="../../assets/img/Graph.png" alt="" style="width: 100%; height: 100%;">
   </div>
 </div>
