--- a/src/app/dashboard/markets/markets.component.html
+++ b/src/app/dashboard/markets/markets.component.html
@@ -1,4 +1,4 @@
-<div class="widget widget--markets">
+<div class="widget widget--gradient">
   <div class="widget__header">
     <span class="widget__name">Markets</span>
     <a href="#" class="widget__question">
@@ -82,7 +82,6 @@
     </table>
     <!--table mob end-->
     <!--table start-->
-
     <div class="widget__table-wrap">
       <table class="table widget__table">
         <thead>
@@ -108,7 +107,7 @@
         </tr>
         </thead>
         <tbody class="table__body table__body--none-shadow">
-        <tr class="table__row">
+        <tr class="table__row widget__table-row">
           <td class="table__cell table__cell--tac">
     <span class="table__row-star">
     <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -131,7 +130,7 @@
             <span style="font-size: 10px; color:#A0A0A0">9 511.31660052</span>
           </td>
         </tr>
-        <tr class="table__row">
+        <tr class="table__row widget__table-row widget__table-row--green">
           <td class="table__cell table__cell--tac">
     <span class="table__row-star">
     <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -154,7 +153,7 @@
             <span style="font-size: 10px; color:#A0A0A0">9 511.31660052</span>
           </td>
         </tr>
-        <tr class="table__row">
+        <tr class="table__row widget__table-row">
           <td class="table__cell table__cell--tac">
     <span class="table__row-star">
     <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -177,7 +176,7 @@
             <span style="font-size: 10px; color:#A0A0A0">9 511.31660052</span>
           </td>
         </tr>
-        <tr class="table__row">
+        <tr class="table__row widget__table-row widget__table-row--red">
           <td class="table__cell table__cell--tac">
     <span class="table__row-star">
     <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -200,7 +199,7 @@
             <span style="font-size: 10px; color:#A0A0A0">9 511.31660052</span>
           </td>
         </tr>
-        <tr class="table__row">
+        <tr class="table__row widget__table-row">
           <td class="table__cell table__cell--tac">
     <span class="table__row-star">
     <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -223,7 +222,7 @@
             <span style="font-size: 10px; color:#A0A0A0">9 511.31660052</span>
           </td>
         </tr>
-        <tr class="table__row">
+        <tr class="table__row widget__table-row">
           <td class="table__cell table__cell--tac">
     <span class="table__row-star">
     <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -246,7 +245,7 @@
             <span style="font-size: 10px; color:#A0A0A0">9 511.31660052</span>
           </td>
         </tr>
-        <tr class="table__row">
+        <tr class="table__row widget__table-row">
           <td class="table__cell table__cell--tac">
     <span class="table__row-star">
     <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -269,7 +268,7 @@
             <span style="font-size: 10px; color:#A0A0A0">9 511.31660052</span>
           </td>
         </tr>
-        <tr class="table__row">
+        <tr class="table__row widget__table-row">
           <td class="table__cell table__cell--tac">
     <span class="table__row-star">
     <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -294,6 +293,13 @@
         </tr>
         </tbody>
       </table>
+    </div>
+    <div class="widget__search">
+      <input class="widget__search-input"  type="text" required="" placeholder="Search">
+      <span class="widget__input-img"><img src="../../assets/img/search.svg"></span>
+    </div>
+    <div class="widget__scroll">
+      <span class="widget__scroll-inner"></span>
     </div>
     <!--table end-->
   </div>
