--- a/src/app/dashboard/trade-history/trade-history.component.html
+++ b/src/app/dashboard/trade-history/trade-history.component.html
@@ -1,4 +1,4 @@
-<div class="widget">
+<div class="widget widget--gradient">
   <div class="widget__header">
     <span class="widget__name">Trade history</span>
     <a href="#" class="widget__question">
@@ -57,6 +57,138 @@
         </svg>
 
       </div>
+    </div>
+  </div>
+  <div class="widget__content">
+    <!--table mob start-->
+    <table class="table widget__table widget__table--mob">
+      <thead>
+      <tr>
+        <th class="table__cell-head table__cell-head--p4">s</th>
+        <th class="table__cell-head table__cell-head--p4">Pair / <span>Vol</span></th>
+        <th class="table__cell-head table__cell-head--p4">Last price</th>
+        <th class="table__cell-head table__cell-head--p4">24h chg</th>
+      </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+    <!--table mob end-->
+    <!--table start-->
+    <div class="widget__table-wrap widget__table-wrap--ml16">
+      <table class="table widget__table">
+        <thead>
+        <tr>
+          <th class="table__cell-head table__cell-head--tal table__cell-head--p4">Time</th>
+          <th class="table__cell-head table__cell-head--tal table__cell-head--p4">Rate for</th>
+          <th class="table__cell-head table__cell-head--tar table__cell-head--p4"><span>BTC</span></th>
+        </tr>
+        </thead>
+        <tbody class="table__body table__body--none-shadow">
+        <tr class="table__row widget__table-row">
+          <td class="table__cell table__cell--tal">
+            17:36:04
+          </td>
+          <td class="table__cell table__cell--tal">
+            <span>0.01</span>
+          </td>
+          <td class="table__cell table__cell--tar">
+            <span>60</span>
+          </td>
+        </tr>
+        <tr class="table__row widget__table-row widget__table-row--green">
+          <td class="table__cell table__cell--tal">
+            17:36:04
+          </td>
+          <td class="table__cell table__cell--tal">
+            <span>0.01</span>
+          </td>
+          <td class="table__cell table__cell--tar">
+            <span>60</span>
+          </td>
+        </tr>
+        <tr class="table__row widget__table-row ">
+          <td class="table__cell table__cell--tal">
+            17:36:04
+          </td>
+          <td class="table__cell table__cell--tal">
+            <span>0.01</span>
+          </td>
+          <td class="table__cell table__cell--tar">
+            <span>60</span>
+          </td>
+        </tr>
+        <tr class="table__row widget__table-row widget__table-row--red">
+          <td class="table__cell table__cell--tal">
+            17:36:04
+          </td>
+          <td class="table__cell table__cell--tal">
+            <span>0.01</span>
+          </td>
+          <td class="table__cell table__cell--tar">
+            <span>60</span>
+          </td>
+        </tr>
+        <tr class="table__row widget__table-row widget__table-row--green">
+          <td class="table__cell table__cell--tal">
+            17:36:04
+          </td>
+          <td class="table__cell table__cell--tal">
+            <span>0.01</span>
+          </td>
+          <td class="table__cell table__cell--tar">
+            <span>60</span>
+          </td>
+        </tr>
+        <tr class="table__row widget__table-row ">
+          <td class="table__cell table__cell--tal">
+            17:36:04
+          </td>
+          <td class="table__cell table__cell--tal">
+            <span>0.01</span>
+          </td>
+          <td class="table__cell table__cell--tar">
+            <span>60</span>
+          </td>
+        </tr>
+        <tr class="table__row widget__table-row">
+          <td class="table__cell table__cell--tal">
+            17:36:04
+          </td>
+          <td class="table__cell table__cell--tal">
+            <span>0.01</span>
+          </td>
+          <td class="table__cell table__cell--tar">
+            <span>60</span>
+          </td>
+        </tr>
+        <tr class="table__row widget__table-row">
+          <td class="table__cell table__cell--tal">
+            17:36:04
+          </td>
+          <td class="table__cell table__cell--tal">
+            <span>0.01</span>
+          </td>
+          <td class="table__cell table__cell--tar">
+            <span>60</span>
+          </td>
+        </tr>
+        <tr class="table__row widget__table-row">
+          <td class="table__cell table__cell--tal">
+            17:36:04
+          </td>
+          <td class="table__cell table__cell--tal">
+            <span>0.01</span>
+          </td>
+          <td class="table__cell table__cell--tar">
+            <span>60</span>
+          </td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+    <!--table end-->
+    <div class="widget__scroll">
+      <span class="widget__scroll-inner"></span>
     </div>
   </div>
 </div>
