--- a/src/app/dashboard/trading/trading.component.html
+++ b/src/app/dashboard/trading/trading.component.html
@@ -1,4 +1,4 @@
-<div class="widget">
+<div class="widget widget--gradient">
   <div class="widget__header">
     <span class="widget__name">Trading</span>
     <a href="#" class="widget__question">
