--- a/src/app/dashboard/chat/chat.component.html
+++ b/src/app/dashboard/chat/chat.component.html
@@ -1,4 +1,4 @@
-<div class="widget">
+<div class="widget widget--gradient">
   <div class="widget__header">
     <span class="widget__name">Chat</span>
     <a href="#" class="widget__question">
@@ -57,6 +57,96 @@
         </svg>
 
       </div>
+    </div>
+  </div>
+  <div class="widget__content">
+    <div class="widget__chat-wrap">
+      <div class="widget__message-wrap widget__message-wrap--left">
+        <div class="widget__message-icon">
+          <img src="../../assets/img/chat-icon1.svg" alt="">
+        </div>
+        <div class="widget__message">
+          <div class="widget__message-nickname">yourFavorite_nIckname</div>
+          <p class="widget__message-text">every one yelling their coin bro.. what irritatae?</p>
+        </div>
+        <div class="widget__message-time">10:32</div>
+      </div>
+      <div class="widget__message-wrap widget__message-wrap--left">
+        <div class="widget__message-icon">
+          <img src="../../assets/img/chat-icon1.svg" alt="">
+        </div>
+        <div class="widget__message">
+          <div class="widget__message-nickname widget__message-nickname--hide">yourFavorite_nIckname</div>
+          <p class="widget__message-text">you are</p>
+        </div>
+        <div class="widget__message-time">10:32</div>
+      </div>
+      <div class="widget__message-wrap widget__message-wrap--left">
+        <div class="widget__message-icon">
+          <img src="" alt="">
+          <span>T</span>
+        </div>
+        <div class="widget__message">
+          <div class="widget__message-nickname">Tamb221</div>
+          <p class="widget__message-text">it's too soon to say it as scam guys</p>
+        </div>
+        <div class="widget__message-time">10:32</div>
+      </div>
+      <div class="widget__message-wrap widget__message-wrap--left">
+        <div class="widget__message-icon">
+          <img src="" alt="">
+          <span>R</span>
+        </div>
+        <div class="widget__message">
+          <div class="widget__message-nickname">rena19</div>
+          <p class="widget__message-text">haha.. save us?..</p>
+        </div>
+        <div class="widget__message-time">10:32</div>
+      </div>
+      <div class="widget__message-wrap widget__message-wrap--left">
+        <div class="widget__message-icon">
+          <img src="" alt="">
+          <span>R</span>
+        </div>
+        <div class="widget__message">
+          <div class="widget__message-nickname widget__message-nickname--hide">rena19</div>
+          <p class="widget__message-text">jadi, tradingnya di pair b2g-btc saja kalok mau cepat liquid</p>
+        </div>
+        <div class="widget__message-time">10:32</div>
+      </div>
+      <div class="widget__message-day">
+        <span>24</span> of <span>july</span>
+      </div>
+      <div class="widget__message-wrap widget__message-wrap--right">
+        <div class="widget__message">
+          <div class="widget__message-nickname">Tamb221</div>
+          <p class="widget__message-text">it's too soon to say it as scam guys</p>
+        </div>
+        <div class="widget__message-icon">
+          <img src="" alt="">
+          <span>T</span>
+        </div>
+        <div class="widget__message-time">10:32</div>
+      </div>
+      <div class="widget__message-wrap widget__message-wrap--right">
+        <div class="widget__message">
+          <div class="widget__message-nickname">Tamb221</div>
+          <p class="widget__message-text">it's too soon to say it as scam guys</p>
+        </div>
+        <div class="widget__message-icon">
+          <img src="" alt="">
+          <span>T</span>
+        </div>
+        <div class="widget__message-time">10:32</div>
+      </div>
+    </div>
+    <div class="widget__send-message">
+      <input class="widget__send-input"  type="text" required="" placeholder="Text your message here">
+      <span class="widget__input-img widget__input-img--hide-mob widget__input-img--second-icon"><img src="../../assets/img/smiley.svg"></span>
+      <span class="widget__input-img"><img src="../../assets/img/send-message.svg"></span>
+    </div>
+    <div class="widget__scroll">
+      <span class="widget__scroll-inner"></span>
     </div>
   </div>
 </div>
