--- a/src/assets/scss/components/_tabs.scss
+++ b/src/assets/scss/components/_tabs.scss
@@ -19,6 +19,7 @@
     display: block;
     border: none;
     outline: 0;
+    margin: 0;
     background: 0 0;
     cursor: pointer;
     font-size: 18px;
