--- a/src/assets/scss/pages/_dashboard.scss
+++ b/src/assets/scss/pages/_dashboard.scss
@@ -17,7 +17,7 @@
 @media (min-width:1200px) {
   .dashboard{
     &__item{
-      //height: 220px;
+      height: 420px;
       margin: 0 16px 20px;
       &--width1{
         width: calc(100% / 3 - 32px);
